Revert "rebuild content"
This reverts commit 79053035f263b24b97469f2b4754eae058c7cc16.

--- a/archives.html
+++ b/archives.html
@@ -20,12 +20,60 @@
             <li><a href="/archives.html">blog</a></li>
             <li><a href="/pages/about.html">about</a></li>
             <li><a href="http://www.github.com/jdangerx">github</a></li>
-            <li><a href="/jobs/resume.pdf">resume</a></li>
+            <li><a href="/misc/resume.pdf">resume</a></li>
         </ul></nav><!-- /#menu -->
         <hr>
 <h2>Blog</h2>
 
 <dl>
+    <dt><a href="/principles-of-planetary-climate-chapter-1-workbook.html">Principles of Planetary Climate, Chapter 1 Workbook</a></dt>
+    <dd>Sat 10 January 2015</dd>
+    <!-- <dt>Sat 10 January 2015</dt> -->
+    <!-- <dd><a href="./principles-of-planetary-climate-chapter-1-workbook.html">Principles of Planetary Climate, Chapter 1 Workbook</a></dd> -->
+    <dt><a href="/lets-read-principles-of-planetary-climate-chapter-1.html">Let's Read Principles of Planetary Climate, Chapter 1</a></dt>
+    <dd>Sun 30 November 2014</dd>
+    <!-- <dt>Sun 30 November 2014</dt> -->
+    <!-- <dd><a href="./lets-read-principles-of-planetary-climate-chapter-1.html">Let's Read Principles of Planetary Climate, Chapter 1</a></dd> -->
+    <dt><a href="/speed-of-news.html">The Speed of News</a></dt>
+    <dd>Sun 23 November 2014</dd>
+    <!-- <dt>Sun 23 November 2014</dt> -->
+    <!-- <dd><a href="./speed-of-news.html">The Speed of News</a></dd> -->
+    <dt><a href="/animusic.html">Animusic</a></dt>
+    <dd>Sun 29 June 2014</dd>
+    <!-- <dt>Sun 29 June 2014</dt> -->
+    <!-- <dd><a href="./animusic.html">Animusic</a></dd> -->
+    <dt><a href="/ordered-indetermined.html">Ordered and Indetermined</a></dt>
+    <dd>Tue 20 May 2014</dd>
+    <!-- <dt>Tue 20 May 2014</dt> -->
+    <!-- <dd><a href="./ordered-indetermined.html">Ordered and Indetermined</a></dd> -->
+    <dt><a href="/hvz-catapult.html">HvZ Catapult</a></dt>
+    <dd>Tue 20 May 2014</dd>
+    <!-- <dt>Tue 20 May 2014</dt> -->
+    <!-- <dd><a href="./hvz-catapult.html">HvZ Catapult</a></dd> -->
+    <dt><a href="/water-blob.html">Water Blob</a></dt>
+    <dd>Tue 20 May 2014</dd>
+    <!-- <dt>Tue 20 May 2014</dt> -->
+    <!-- <dd><a href="./water-blob.html">Water Blob</a></dd> -->
+    <dt><a href="/swingy-arm-thing.html">Swingy Arm Thing</a></dt>
+    <dd>Fri 07 February 2014</dd>
+    <!-- <dt>Fri 07 February 2014</dt> -->
+    <!-- <dd><a href="./swingy-arm-thing.html">Swingy Arm Thing</a></dd> -->
+    <dt><a href="/bamboo-bike.html">Bamboo Bike</a></dt>
+    <dd>Thu 05 September 2013</dd>
+    <!-- <dt>Thu 05 September 2013</dt> -->
+    <!-- <dd><a href="./bamboo-bike.html">Bamboo Bike</a></dd> -->
+    <dt><a href="/tensegrity.html">Tensegrity</a></dt>
+    <dd>Sat 31 August 2013</dd>
+    <!-- <dt>Sat 31 August 2013</dt> -->
+    <!-- <dd><a href="./tensegrity.html">Tensegrity</a></dd> -->
+    <dt><a href="/scav.html">Scav 2011-2013</a></dt>
+    <dd>Fri 30 August 2013</dd>
+    <!-- <dt>Fri 30 August 2013</dt> -->
+    <!-- <dd><a href="./scav.html">Scav 2011-2013</a></dd> -->
+    <dt><a href="/fourth-app.html">FourthApp</a></dt>
+    <dd>Tue 13 August 2013</dd>
+    <!-- <dt>Tue 13 August 2013</dt> -->
+    <!-- <dd><a href="./fourth-app.html">FourthApp</a></dd> -->
 </dl>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
