--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title>No Promises</title>
+        <title>John Xia</title>
         <meta charset="utf-8" />
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic' rel='stylesheet' type='text/css'>
@@ -20,18 +20,37 @@
             <li><a href="/archives.html">blog</a></li>
             <li><a href="/pages/about.html">about</a></li>
             <li><a href="http://www.github.com/jdangerx">github</a></li>
-            <li><a href="/jobs/resume.pdf">resume</a></li>
+            <li><a href="/misc/resume.pdf">resume</a></li>
         </ul></nav><!-- /#menu -->
         <hr>
-<section id="content">
-<h2>All articles</h2>
+    <!-- <h2></h2> -->
+    <!--  -->
+    <!--  -->
 
-<ol id="post-list">
-</ol><!-- /#posts-list -->
-<p class="paginator">
-    Page 1 / 1
-</p>
-</section><!-- /#content -->
+    <h2>Projects</h2>
+<p>Hi! These are some projects!</p>
+<p>Code Stuff:</p>
+<ul>
+<li><a href="../../relativity">relativity map</a>
+  <span class="small-text"><a href="http://www.github.com/jdangerx/relativity">[code]</a></span>
+  <span class="small-text"><a href="../speed-of-news.html">[writeup]</a></span></li>
+<li><a href="../../ordered_indetermined">ordered and indetermined</a>
+  <span class="small-text"><a href="http://www.github.com/jdangerx/ordered_indetermined">[code]</a></span>
+  <span class="small-text"><a href="../ordered-indetermined.html">[writeup]</a></span></li>
+<li>mkrcp
+  <span class="small-text"><a href="http://www.github.com/jdangerx/mkrcp">[code]</a></span></li>
+</ul>
+<p>Real Stuff:</p>
+<ul>
+<li>water blob <span class="small-text"><a href="../water-blob.html">[writeup]</a></span></li>
+<li>swingy arm thing <span class="small-text"><a href="../swingy-arm-thing.html">[writeup]</a></span></li>
+</ul>
+<p>Words:</p>
+<ul>
+<li><a href="http://tenyearsapeasant.tumblr.com">ten years a peasant</a>
+<!-- * let's read planetary science --></li>
+</ul>
+
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
