--- a/categories.html
+++ b/categories.html
@@ -20,10 +20,14 @@
             <li><a href="/archives.html">blog</a></li>
             <li><a href="/pages/about.html">about</a></li>
             <li><a href="http://www.github.com/jdangerx">github</a></li>
-            <li><a href="/jobs/resume.pdf">resume</a></li>
+            <li><a href="/misc/resume.pdf">resume</a></li>
         </ul></nav><!-- /#menu -->
         <hr>
 <ul>
+    <li><a href="./category/misc.html">misc</a></li>
+    <li><a href="./category/not-software.html">not software</a></li>
+    <li><a href="./category/planetaryclimate.html">planetaryclimate</a></li>
+    <li><a href="./category/software.html">software</a></li>
 </ul>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
