--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title>No Promises - Authors</title>
+        <title>About</title>
         <meta charset="utf-8" />
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic' rel='stylesheet' type='text/css'>
@@ -13,7 +13,7 @@
 <body id="index" class="home">
   <div class="content">
         <header id="banner" class="body">
-                <h1><a href="./">No Promises <strong></strong></a></h1>
+                <h1><a href="../">No Promises <strong></strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
             <li><a href="/">projects</a></li>
@@ -23,10 +23,18 @@
             <li><a href="/misc/resume.pdf">resume</a></li>
         </ul></nav><!-- /#menu -->
         <hr>
-    <h1>Authors on No Promises</h1>
+    <!-- <h2></h2> -->
+    <!--  -->
+    <!--  -->
 
-    <ul>        <li><a href="./author/john-xia.html">John Xia</a> (12)</li>
-    </ul>
+    <h2>About</h2>
+<p>I am John Xia. I am a recent physics undergrad from the
+<a href="http://www.uchicago.edu">University of Chicago</a> and an "Associate Research
+Specialist" in the
+<a href="http://cnerg.github.io/">Computational Nuclear Engineering Research Group</a> at
+the University of Wisconsin-Madison.</p>
+<p>I currently live in the great city of Chicago.</p>
+
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
