--- a/tags.html
+++ b/tags.html
@@ -20,10 +20,17 @@
             <li><a href="/archives.html">blog</a></li>
             <li><a href="/pages/about.html">about</a></li>
             <li><a href="http://www.github.com/jdangerx">github</a></li>
-            <li><a href="/jobs/resume.pdf">resume</a></li>
+            <li><a href="/misc/resume.pdf">resume</a></li>
         </ul></nav><!-- /#menu -->
         <hr>
-    <h1>Tags for No Promises</h1>        <footer id="contentinfo" class="body">
+    <h1>Tags for No Promises</h1>        <li><a href="./tag/3d-printing.html">3D printing</a> (1)</li>
+        <li><a href="./tag/art.html">"art"</a> (1)</li>
+        <li><a href="./tag/bicycles.html">bicycles</a> (1)</li>
+        <li><a href="./tag/code.html">code</a> (1)</li>
+        <li><a href="./tag/magnets.html">magnets</a> (1)</li>
+        <li><a href="./tag/scav.html">Scav</a> (2)</li>
+        <li><a href="./tag/wood.html">wood</a> (1)</li>
+        <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
                 Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
                 which takes great advantage of <a href="http://python.org">Python</a>.
