fixing resume link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="/archives.html">blog</a></li>
             <li><a href="/pages/about.html">about</a></li>
             <li><a href="http://www.github.com/jdangerx">github</a></li>
-            <li><a href="/misc/resume.pdf">resume</a></li>
+            <li><a href="/jobs/resume.pdf">resume</a></li>
         </ul></nav><!-- /#menu -->
         <hr>
     <!-- <h2></h2> -->
