fix linx in html

--- a/archives.html
+++ b/archives.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="/theme/css/base.css"/>
+        <link rel="stylesheet" type="text/css" href="/blog2015/theme/css/base.css"/>
         <link href="http://www.johnxia.me/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="No Promises Full Atom Feed" />
         <link href="http://www.johnxia.me/feeds/rss.xml" type="application/rss+xml" rel="alternate" title="No Promises Full RSS Feed" />
 </head>
@@ -16,61 +16,61 @@
                 <h1><a href="./">No Promises <strong></strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="/">projects</a></li>
-            <li><a href="/archives.html">blog</a></li>
-            <li><a href="/pages/about.html">about</a></li>
+            <li><a href="/blog2015/">projects</a></li>
+            <li><a href="/blog2015/archives.html">blog</a></li>
+            <li><a href="/blog2015/pages/about.html">about</a></li>
             <li><a href="http://www.github.com/jdangerx">github</a></li>
-            <li><a href="/misc/resume.pdf">resume</a></li>
+            <li><a href="/blog2015/misc/resume.pdf">resume</a></li>
         </ul></nav><!-- /#menu -->
         <hr>
 <h2>Blog</h2>
 
 <dl>
-    <dt><a href="/principles-of-planetary-climate-chapter-1-workbook.html">Principles of Planetary Climate, Chapter 1 Workbook</a></dt>
+    <dt><a href="/blog2015/principles-of-planetary-climate-chapter-1-workbook.html">Principles of Planetary Climate, Chapter 1 Workbook</a></dt>
     <dd>Sat 10 January 2015</dd>
     <!-- <dt>Sat 10 January 2015</dt> -->
     <!-- <dd><a href="./principles-of-planetary-climate-chapter-1-workbook.html">Principles of Planetary Climate, Chapter 1 Workbook</a></dd> -->
-    <dt><a href="/lets-read-principles-of-planetary-climate-chapter-1.html">Let's Read Principles of Planetary Climate, Chapter 1</a></dt>
+    <dt><a href="/blog2015/lets-read-principles-of-planetary-climate-chapter-1.html">Let's Read Principles of Planetary Climate, Chapter 1</a></dt>
     <dd>Sun 30 November 2014</dd>
     <!-- <dt>Sun 30 November 2014</dt> -->
     <!-- <dd><a href="./lets-read-principles-of-planetary-climate-chapter-1.html">Let's Read Principles of Planetary Climate, Chapter 1</a></dd> -->
-    <dt><a href="/speed-of-news.html">The Speed of News</a></dt>
+    <dt><a href="/blog2015/speed-of-news.html">The Speed of News</a></dt>
     <dd>Sun 23 November 2014</dd>
     <!-- <dt>Sun 23 November 2014</dt> -->
     <!-- <dd><a href="./speed-of-news.html">The Speed of News</a></dd> -->
-    <dt><a href="/animusic.html">Animusic</a></dt>
+    <dt><a href="/blog2015/animusic.html">Animusic</a></dt>
     <dd>Sun 29 June 2014</dd>
     <!-- <dt>Sun 29 June 2014</dt> -->
     <!-- <dd><a href="./animusic.html">Animusic</a></dd> -->
-    <dt><a href="/ordered-indetermined.html">Ordered and Indetermined</a></dt>
+    <dt><a href="/blog2015/ordered-indetermined.html">Ordered and Indetermined</a></dt>
     <dd>Tue 20 May 2014</dd>
     <!-- <dt>Tue 20 May 2014</dt> -->
     <!-- <dd><a href="./ordered-indetermined.html">Ordered and Indetermined</a></dd> -->
-    <dt><a href="/hvz-catapult.html">HvZ Catapult</a></dt>
+    <dt><a href="/blog2015/hvz-catapult.html">HvZ Catapult</a></dt>
     <dd>Tue 20 May 2014</dd>
     <!-- <dt>Tue 20 May 2014</dt> -->
     <!-- <dd><a href="./hvz-catapult.html">HvZ Catapult</a></dd> -->
-    <dt><a href="/water-blob.html">Water Blob</a></dt>
+    <dt><a href="/blog2015/water-blob.html">Water Blob</a></dt>
     <dd>Tue 20 May 2014</dd>
     <!-- <dt>Tue 20 May 2014</dt> -->
     <!-- <dd><a href="./water-blob.html">Water Blob</a></dd> -->
-    <dt><a href="/swingy-arm-thing.html">Swingy Arm Thing</a></dt>
+    <dt><a href="/blog2015/swingy-arm-thing.html">Swingy Arm Thing</a></dt>
     <dd>Fri 07 February 2014</dd>
     <!-- <dt>Fri 07 February 2014</dt> -->
     <!-- <dd><a href="./swingy-arm-thing.html">Swingy Arm Thing</a></dd> -->
-    <dt><a href="/bamboo-bike.html">Bamboo Bike</a></dt>
+    <dt><a href="/blog2015/bamboo-bike.html">Bamboo Bike</a></dt>
     <dd>Thu 05 September 2013</dd>
     <!-- <dt>Thu 05 September 2013</dt> -->
     <!-- <dd><a href="./bamboo-bike.html">Bamboo Bike</a></dd> -->
-    <dt><a href="/tensegrity.html">Tensegrity</a></dt>
+    <dt><a href="/blog2015/tensegrity.html">Tensegrity</a></dt>
     <dd>Sat 31 August 2013</dd>
     <!-- <dt>Sat 31 August 2013</dt> -->
     <!-- <dd><a href="./tensegrity.html">Tensegrity</a></dd> -->
-    <dt><a href="/scav.html">Scav 2011-2013</a></dt>
+    <dt><a href="/blog2015/scav.html">Scav 2011-2013</a></dt>
     <dd>Fri 30 August 2013</dd>
     <!-- <dt>Fri 30 August 2013</dt> -->
     <!-- <dd><a href="./scav.html">Scav 2011-2013</a></dd> -->
-    <dt><a href="/fourth-app.html">FourthApp</a></dt>
+    <dt><a href="/blog2015/fourth-app.html">FourthApp</a></dt>
     <dd>Tue 13 August 2013</dd>
     <!-- <dt>Tue 13 August 2013</dt> -->
     <!-- <dd><a href="./fourth-app.html">FourthApp</a></dd> -->
