--- a/speed-of-news.html
+++ b/speed-of-news.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="/theme/css/base.css"/>
+        <link rel="stylesheet" type="text/css" href="/blog2015/theme/css/base.css"/>
         <link href="http://www.johnxia.me/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="No Promises Full Atom Feed" />
         <link href="http://www.johnxia.me/feeds/rss.xml" type="application/rss+xml" rel="alternate" title="No Promises Full RSS Feed" />
         <link href="http://www.johnxia.me/feeds/misc.atom.xml" type="application/atom+xml" rel="alternate" title="No Promises Categories Atom Feed" />
@@ -21,11 +21,11 @@
                 <h1><a href="./">No Promises <strong></strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="/">projects</a></li>
-            <li><a href="/archives.html">blog</a></li>
-            <li><a href="/pages/about.html">about</a></li>
+            <li><a href="/blog2015/">projects</a></li>
+            <li><a href="/blog2015/archives.html">blog</a></li>
+            <li><a href="/blog2015/pages/about.html">about</a></li>
             <li><a href="http://www.github.com/jdangerx">github</a></li>
-            <li><a href="/misc/resume.pdf">resume</a></li>
+            <li><a href="/blog2015/misc/resume.pdf">resume</a></li>
         </ul></nav><!-- /#menu -->
         <hr>
 <section id="content" class="body">
@@ -50,7 +50,7 @@ things, that in ancient Sumeria places that were far away were also
 somehow farther in the past. This is roughly similar to the
 correspondence between space and time which we study in
 relativity. Why did the Sumerians find space-time unification so
-natural? In my <a href="/misc/NEHC_final.pdf">final paper</a>, I argued that at the core of both
+natural? In my <a href="/blog2015/misc/NEHC_final.pdf">final paper</a>, I argued that at the core of both
 conceptions of space-time was the limited speed of information. In
 ancient Sumeria, the speed of information was much slower than the
 speed of light, and thus the time-bending effects of space were more
@@ -61,7 +61,7 @@ Civilization Studies course.</p>
 <a href="https://hack.uchicago.edu">hack@UChicago</a> Fall Hackathon on a whim. I was tooting around
 after the workshops, trying to figure out what to make, when I
 remembered that paper.</p>
-<p>I decided to make a <a href="/relativity">map</a> that would let you see what
+<p>I decided to make a <a href="/blog2015/relativity">map</a> that would let you see what
 sort of news you would be hearing from around the world if news
 traveled at human speeds. The blue (draggable) marker is your current
 location. You can click the map to find the news that you would be
@@ -74,7 +74,7 @@ and southern Canada. I use the <a href="http://developer.nytimes.com/docs/read/a
 find news from that location; it has similar regional
 problems. Unfortunately the Google News API was deprecated long ago.</p>
   </div><!-- /.entry-content -->
-  <a href="/archives.html">< back</a>
+  <a href="/blog2015/archives.html">< back</a>
 </section>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
