--- a/bamboo-bike.html
+++ b/bamboo-bike.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="/theme/css/base.css"/>
+        <link rel="stylesheet" type="text/css" href="/blog2015/theme/css/base.css"/>
         <link href="http://www.johnxia.me/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="No Promises Full Atom Feed" />
         <link href="http://www.johnxia.me/feeds/rss.xml" type="application/rss+xml" rel="alternate" title="No Promises Full RSS Feed" />
         <link href="http://www.johnxia.me/feeds/not-software.atom.xml" type="application/atom+xml" rel="alternate" title="No Promises Categories Atom Feed" />
@@ -22,11 +22,11 @@
                 <h1><a href="./">No Promises <strong></strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="/">projects</a></li>
-            <li><a href="/archives.html">blog</a></li>
-            <li><a href="/pages/about.html">about</a></li>
+            <li><a href="/blog2015/">projects</a></li>
+            <li><a href="/blog2015/archives.html">blog</a></li>
+            <li><a href="/blog2015/pages/about.html">about</a></li>
             <li><a href="http://www.github.com/jdangerx">github</a></li>
-            <li><a href="/misc/resume.pdf">resume</a></li>
+            <li><a href="/blog2015/misc/resume.pdf">resume</a></li>
         </ul></nav><!-- /#menu -->
         <hr>
 <section id="content" class="body">
@@ -108,7 +108,7 @@ gussets, etc. The idea is to minimize the probability of kinks and air pockets
 in the fiber by making the joint as smooth as possible. I'll have to test to see
 which method works best.</p>
   </div><!-- /.entry-content -->
-  <a href="/archives.html">< back</a>
+  <a href="/blog2015/archives.html">< back</a>
 </section>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
