--- a/ordered-indetermined.html
+++ b/ordered-indetermined.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="/theme/css/base.css"/>
+        <link rel="stylesheet" type="text/css" href="/blog2015/theme/css/base.css"/>
         <link href="http://www.johnxia.me/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="No Promises Full Atom Feed" />
         <link href="http://www.johnxia.me/feeds/rss.xml" type="application/rss+xml" rel="alternate" title="No Promises Full RSS Feed" />
         <link href="http://www.johnxia.me/feeds/misc.atom.xml" type="application/atom+xml" rel="alternate" title="No Promises Categories Atom Feed" />
@@ -21,11 +21,11 @@
                 <h1><a href="./">No Promises <strong></strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="/">projects</a></li>
-            <li><a href="/archives.html">blog</a></li>
-            <li><a href="/pages/about.html">about</a></li>
+            <li><a href="/blog2015/">projects</a></li>
+            <li><a href="/blog2015/archives.html">blog</a></li>
+            <li><a href="/blog2015/pages/about.html">about</a></li>
             <li><a href="http://www.github.com/jdangerx">github</a></li>
-            <li><a href="/misc/resume.pdf">resume</a></li>
+            <li><a href="/blog2015/misc/resume.pdf">resume</a></li>
         </ul></nav><!-- /#menu -->
         <hr>
 <section id="content" class="body">
@@ -52,7 +52,7 @@ pretty much my introduction to the language. Screenshots follow.</p>
 professor thought was uninteresting. So I stopped at making bouncing
 blocks. I wondered what it would look like if I just made a ton of
 bouncing rectangles:</p>
-<p><a href="/ordered_indetermined/juggle.html">
+<p><a href="/blog2015/ordered_indetermined/juggle.html">
 <img src="/images/ordered-indetermined/juggle-view.jpg" style="width:400px;">
 <div class="caption">Click for animation...</div>
 </a></p>
@@ -60,11 +60,11 @@ bouncing rectangles:</p>
 "ElevatorCorp", an idealized simulation of an office building where
 all the workers do is ride elevators all day. I used
 <a href="http://threejs.org/">three.js</a> to talk to WebGL.</p>
-<p><a href="/ordered_indetermined/elevators.html">
+<p><a href="/blog2015/ordered_indetermined/elevators.html">
 <img src="/images/ordered-indetermined/elevatorcorp.jpg">
 </a></p>
   </div><!-- /.entry-content -->
-  <a href="/archives.html">< back</a>
+  <a href="/blog2015/archives.html">< back</a>
 </section>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
