--- a/water-blob.html
+++ b/water-blob.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="/theme/css/base.css"/>
+        <link rel="stylesheet" type="text/css" href="/blog2015/theme/css/base.css"/>
         <link href="http://www.johnxia.me/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="No Promises Full Atom Feed" />
         <link href="http://www.johnxia.me/feeds/rss.xml" type="application/rss+xml" rel="alternate" title="No Promises Full RSS Feed" />
         <link href="http://www.johnxia.me/feeds/misc.atom.xml" type="application/atom+xml" rel="alternate" title="No Promises Categories Atom Feed" />
@@ -21,11 +21,11 @@
                 <h1><a href="./">No Promises <strong></strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-            <li><a href="/">projects</a></li>
-            <li><a href="/archives.html">blog</a></li>
-            <li><a href="/pages/about.html">about</a></li>
+            <li><a href="/blog2015/">projects</a></li>
+            <li><a href="/blog2015/archives.html">blog</a></li>
+            <li><a href="/blog2015/pages/about.html">about</a></li>
             <li><a href="http://www.github.com/jdangerx">github</a></li>
-            <li><a href="/misc/resume.pdf">resume</a></li>
+            <li><a href="/blog2015/misc/resume.pdf">resume</a></li>
         </ul></nav><!-- /#menu -->
         <hr>
 <section id="content" class="body">
@@ -76,7 +76,7 @@ well I was doubly suprised.</p>
 <p><img src="/images/water-blob/apparatus.jpg"></p>
 <p>Pictures courtesy of Clare Koury.</p>
   </div><!-- /.entry-content -->
-  <a href="/archives.html">< back</a>
+  <a href="/blog2015/archives.html">< back</a>
 </section>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
