fixing more linx

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 <p>Hi! These are some projects!</p>
 <p>Code Stuff:</p>
 <ul>
-<li><a href="../../relativity">relativity map</a>
+<li><a href="/relativity">relativity map</a>
   <span class="small-text"><a href="http://www.github.com/jdangerx/relativity">[code]</a></span>
-  <span class="small-text"><a href="../speed-of-news.html">[writeup]</a></span></li>
-<li><a href="../../ordered_indetermined">ordered and indetermined</a>
+  <span class="small-text"><a href="/blog2015/speed-of-news.html">[writeup]</a></span></li>
+<li><a href="/ordered_indetermined">ordered and indetermined</a>
   <span class="small-text"><a href="http://www.github.com/jdangerx/ordered_indetermined">[code]</a></span>
-  <span class="small-text"><a href="../ordered-indetermined.html">[writeup]</a></span></li>
+  <span class="small-text"><a href="/blog2015/ordered-indetermined.html">[writeup]</a></span></li>
 <li>mkrcp
   <span class="small-text"><a href="http://www.github.com/jdangerx/mkrcp">[code]</a></span></li>
 </ul>
 <p>Real Stuff:</p>
 <ul>
-<li>water blob <span class="small-text"><a href="../water-blob.html">[writeup]</a></span></li>
-<li>swingy arm thing <span class="small-text"><a href="../swingy-arm-thing.html">[writeup]</a></span></li>
+<li>water blob <span class="small-text"><a href="/blog2015/water-blob.html">[writeup]</a></span></li>
+<li>swingy arm thing <span class="small-text"><a href="/blog2015/swingy-arm-thing.html">[writeup]</a></span></li>
 </ul>
 <p>Words:</p>
 <ul>
